[package]
name = "todo"
version = "0.1.0"
authors = ["Tyler Wickline <twick00@gmail.com>"]
edition = "2018"

[dependencies]
dialoguer = {git = "https://github.com/twick00/dialoguer"}
termion = "1.5.1"
config = "0.9"
serde = "1.0.88"
serde_json = "1.0.38"
serde_derive = "1.0.88"

[profile.release]
opt-level = 3